[gd_scene load_steps=4 format=3 uid="uid://byud17pka3n6r"]

[ext_resource type="Script" path="res://map/AtmosphericGhosts.gd" id="1_0x8k2"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.1, 0.05, 0.2, 1)

[node name="AtmosphericGhosts" type="Node3D"]
script = ExtResource("1_0x8k2")

[node name="PurpleLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
light_color = Color(0.8, 0.2, 1, 1)
light_energy = 2.0
omni_range = 15.0

[node name="YellowLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
light_color = Color(1, 0.8, 0.2, 1)
light_energy = 2.0
omni_range = 15.0

[node name="BlueLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
light_color = Color(0.2, 0.5, 1, 1)
light_energy = 2.0
omni_range = 15.0
